fix: mob effect registry