@@ -6,6 +6,9 @@ import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Redirect;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -13,6 +16,6 @@ import java.util.Set;
 public class RecipeComponentValueMapMixin {
     @Redirect(method = "entrySet", at = @At(value = "INVOKE", target = "Ljava/util/Set;of([Ljava/lang/Object;)Ljava/util/Set;"))
     private Set<Object> keepOrder(Object[] set){
-        return ImmutableSortedSet.copyOf(List.of(set));
+        return Collections.unmodifiableSet(new LinkedHashSet<>(Arrays.asList(set)));
     }
 }
